syntax = "proto3";

package user;

option go_package = "grpc/pb/user";

import "common/base_response.proto";
import "google/protobuf/timestamp.proto";

service UserService {
    rpc CreateUser(User) returns (CreateResponse); // Unary
}

message Address {
    int64 id = 1;
    string full_address = 2;
    string province = 3;
    string city = 4;
}

message User {
    reserved 2;
    int64 id = 1;
    int64 age = 3;
    double balance = 4;
    bool is_active = 5;
    Address address = 6;
    repeated string educations = 7;
    string spouse_name = 8;
    google.protobuf.Timestamp birth_date = 9;
}

message CreateResponse {
    common.BaseResponse base = 1;   
    google.protobuf.Timestamp created_at = 2;
}